--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title><%= title %></title>
+		<title>Express</title>
 		<link rel="stylesheet" href="/stylesheets/style.css" />
 	</head>
 
 	<body>
-		<h1><%= title %></h1>
-		<p>Welcome to <%= title %></p>
-
 		<form action="/images" method="POST" enctype="multipart/form-data">
 			<input type="file" name="avatar" /> <input type="submit" />
 		</form>
