--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -12,5 +12,7 @@
 		<form action="/images" method="POST" enctype="multipart/form-data">
 			<input type="file" name="avatar" /> <input type="submit" />
 		</form>
+		<script src="/bundle.js"></script>
+		<script src="http://localhost:35729/livereload.js"></script>
 	</body>
 </html>
