Webpack coniguration complete

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -3,6 +3,7 @@
 	<head>
 		<title><%= title %></title>
 		<link rel="stylesheet" href="/stylesheets/style.css" />
+		<link rel="stylesheet" href="/main.css" />
 	</head>
 
 	<body>
@@ -13,6 +14,5 @@
 			<input type="file" name="avatar" /> <input type="submit" />
 		</form>
 		<script src="/bundle.js"></script>
-		<script src="http://localhost:35729/livereload.js"></script>
 	</body>
 </html>
