--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -3,16 +3,54 @@
 	<head>
 		<title><%= title %></title>
 		<link rel="stylesheet" href="/stylesheets/style.css" />
+		<% if(production){ %>
 		<link rel="stylesheet" href="/main.css" />
+		<% } %>
+		<link
+			href="https://fonts.googleapis.com/icon?family=Material+Icons"
+			rel="stylesheet"
+		/>
+		<!-- Compiled and minified CSS -->
+
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+		/>
 	</head>
 
 	<body>
-		<h1><%= title %></h1>
-		<p>Welcome to <%= title %></p>
-
-		<form action="/images" method="POST" enctype="multipart/form-data">
-			<input type="file" name="avatar" /> <input type="submit" />
-		</form>
+		<div id="camera-container"></div>
+		<div id="shutter-container">
+			<div class="shutter"><a class="shutter-btn" value=""></a></div>
+			<a
+				class="waves-effect waves-light modal-trigger"
+				id="browse"
+				href="#browse-file-modal"
+			>
+				<i class="material-icons">add_box</i>
+			</a>
+			<!--
+				<form action="/images" method="POST" enctype="multipart/form-data">
+					<input type="file" name="avatar" /> <input type="submit" />
+				</form>
+			-->
+		</div>
+		<div id="browse-file-modal" class="modal">
+			<div class="modal-content">
+				<form action="/images" method="POST" enctype="multipart/form-data">
+					<input type="file" name="avatar" />
+					<input
+						id="file-submit"
+						class="btn grey"
+						type="submit"
+						value="Submit"
+					/>
+				</form>
+			</div>
+		</div>
 		<script src="/bundle.js"></script>
+		<!-- Compiled and minified JavaScript -->
+
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	</body>
 </html>
