Add livereload and new design

--- a/client/styles/modules/palette.sass
+++ b/client/styles/modules/palette.sass
@@ -1,6 +1,6 @@
-$primary-color: #607D8B
-$primary-color-dark: #34515E
-$primary-color-light: #8EACBB
+$primary-color: #292929
+$primary-color-dark: darken($primary-color, 15%)
+$primary-color-light: lighten($primary-color, 15%)
 $divider-color: #B9B9B9
 $text-color: #212121
 
