--- a/client/styles/index.sass
+++ b/client/styles/index.sass
@@ -1,48 +1,77 @@
 #camera-container
-    height: 85%
+    height: 85vh
     width: 100%
     background: $divider-color
     display: flex
 
+    #placeholder-img-container
+        height: 100%
+        width: 50%
+        margin-right: auto
+        margin-left: auto
+        display: flex
+        flex-direction: column
+        padding: 10px
+
+        #placeholder-img
+            height: 100%
+            width: auto
+            margin: auto
+
 #shutter-container
-    height: 15%
+    height: 15vh
     width: 100%
     background: White
     display: flex
     flex-direction: row
 
-    .shutter
-        height: 80px
-        width: 80px
-        background: $primary-color
-        margin: auto
+    #browse-form
+        width: 100%
         display: flex
-        border-radius: 50%
 
-        .shutter-btn
-            height: 60px
-            width: 60px
-            margin: auto
-            border-radius: 50%
-            border: 5px solid white
+        .upload-btn-wrapper
+            width: 100%
+            height: 100%
+            position: relative
+            overflow: hidden
+            display: flex
+
+            .shutter
+                height: 80px
+                width: 80px
+                background: $primary-color
+                margin: auto
+                display: flex
+                border-radius: 50%
+
+                .shutter-btn
+                    height: 60px
+                    width: 60px
+                    margin: auto
+                    border-radius: 50%
+                    border: 5px solid white
+
+            input[type="file"]
+                color: red
+                font-size: 100px
+                position: absolute
+                top: 0
+                left: 0
+                overflow: hidden
+                opacity: 0
+
+                &:hover
+                    cursor: pointer
+
+        #file-submit
+            margin-top: auto
+            margin-bottom: auto
+            margin-right: 20px
+            border: 0
+            background: white
 
             &:hover
                 cursor: pointer
 
-    #browse
-        height: 50px
-        width: 50px
-        display: flex
-        margin: auto 5px auto 0
-        cursor: pointer
-
-        .material-icons
-            font-size: 3em
-            display: block
-            color: $primary-color
-            margin: auto
-
-    form
-        margin-top: auto
-        margin-bottom: auto
-        margin-left: auto
+            i.material-icons
+                font-size: 2em
