--- a/client/styles/index.sass
+++ b/client/styles/index.sass
@@ -6,12 +6,13 @@
 
     #placeholder-img-container
         height: 100%
-        width: 50%
+        width: auto
         margin-right: auto
         margin-left: auto
         display: flex
         flex-direction: column
         padding: 10px
+        overflow: hidden
 
         #placeholder-img
             height: 100%
