--- a/client/styles/result.sass
+++ b/client/styles/result.sass
@@ -1,9 +1,10 @@
 .nav
     height: 60px
     width: 100%
-    background: $primary-color
+    background: white
     display: flex
-    color: white
+    color: $primary-color
+    font-size: medium
     font-size: 2em
     padding: 10px
     border-bottom: 1px solid $primary-color
@@ -11,7 +12,7 @@
 
     .material-icons
         font-size: 1.5em
-        color: white
+        color: $primary-color
         margin-top: auto
         margin-bottom: auto
 
@@ -29,6 +30,7 @@
         .carousel-item
             height: 100%
             width: 100%
+            padding: 10px
 
             h2
                 position: absolute
