--- a/client/styles/index.sass
+++ b/client/styles/index.sass
@@ -6,7 +6,7 @@
 
     #placeholder-img-container
         height: 100%
-        width: auto
+        width: 100%
         margin-right: auto
         margin-left: auto
         display: flex
